infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: billetenligne
  labels:
    name: billetenligne
